# DROMA

./: .gitignore  DROMA_BDD.puml  DROMA_IBD.puml  README.md
Simulation/scripts/sitl/: CMakeLists.txt  README.md  SITL_Runbook.md  gcu.slxc  link.slxc  main.slxc  mcu.slxc  plant.slxc  sensors.slxc
Simulation/scripts/sitl/build_cg/: test_mcu_model_e3b0c442_Release_tests.cmake
Simulation/scripts/sitl/build_cg/Testing/Temporary/: CTestCostData.txt
Simulation/scripts/sitl/codegen/lib/dcm2quat_local/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  dcm2quat_local.c  dcm2quat_local.h  dcm2quat_local_data.h  dcm2quat_local_initialize.c  dcm2quat_local_initialize.h  dcm2quat_local_rtw.bat  dcm2quat_local_rtw.mk  dcm2quat_local_rtw.rsp  dcm2quat_local_rtw_comp.rsp  dcm2quat_local_terminate.c  dcm2quat_local_terminate.h  dcm2quat_local_types.h  norm.c  norm.h  rtw_proj.tmw  rtwtypes.h
Simulation/scripts/sitl/codegen/lib/quat2dcm_local/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  quat2dcm_local.c  quat2dcm_local.h  quat2dcm_local_data.h  quat2dcm_local_initialize.c  quat2dcm_local_initialize.h  quat2dcm_local_rtw.bat  quat2dcm_local_rtw.mk  quat2dcm_local_rtw.rsp  quat2dcm_local_rtw_comp.rsp  quat2dcm_local_terminate.c  quat2dcm_local_terminate.h  quat2dcm_local_types.h  rtw_proj.tmw  rtwtypes.h
Simulation/scripts/sitl/codegen/lib/quatConj/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  quatConj.c  quatConj.h  quatConj_data.h  quatConj_initialize.c  quatConj_initialize.h  quatConj_rtw.bat  quatConj_rtw.mk  quatConj_rtw.rsp  quatConj_rtw_comp.rsp  quatConj_terminate.c  quatConj_terminate.h  quatConj_types.h  rtw_proj.tmw  rtwtypes.h
Simulation/scripts/sitl/codegen/lib/quatMul/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  quatMul.c  quatMul.h  quatMul_data.h  quatMul_initialize.c  quatMul_initialize.h  quatMul_rtw.bat  quatMul_rtw.mk  quatMul_rtw.rsp  quatMul_rtw_comp.rsp  quatMul_terminate.c  quatMul_terminate.h  quatMul_types.h  rtw_proj.tmw  rtwtypes.h
Simulation/scripts/sitl/codegen/lib/quatRotate/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  quatRotate.c  quatRotate.h  quatRotate_data.h  quatRotate_initialize.c  quatRotate_initialize.h  quatRotate_rtw.bat  quatRotate_rtw.mk  quatRotate_rtw.rsp  quatRotate_rtw_comp.rsp  quatRotate_terminate.c  quatRotate_terminate.h  quatRotate_types.h  rtw_proj.tmw  rtwtypes.h
Simulation/scripts/sitl/codegen/lib/safety_battery/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtw_proj.tmw  rtwtypes.h  safety_battery.c  safety_battery.h  safety_battery_data.c  safety_battery_data.h  safety_battery_initialize.c  safety_battery_initialize.h  safety_battery_rtw.bat  safety_battery_rtw.mk  safety_battery_rtw.rsp  safety_battery_rtw_comp.rsp  safety_battery_terminate.c  safety_battery_terminate.h  safety_battery_types.h
Simulation/scripts/sitl/codegen/lib/safety_overspeed/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtw_proj.tmw  rtwtypes.h  safety_overspeed.c  safety_overspeed.h  safety_overspeed_data.c  safety_overspeed_data.h  safety_overspeed_initialize.c  safety_overspeed_initialize.h  safety_overspeed_rtw.bat  safety_overspeed_rtw.mk  safety_overspeed_rtw.rsp  safety_overspeed_rtw_comp.rsp  safety_overspeed_terminate.c  safety_overspeed_terminate.h  safety_overspeed_types.h
Simulation/scripts/sitl/data/: gcs_frame_golden.csv  golden_mcu_io.csv  link_codec_golden.csv  test_data_quat.csv  test_data_quatmul.csv
Simulation/scripts/sitl/include/: mcu_io.hpp  mcu_packet.hpp  quat_helpers.h  safety_helpers.h  throttle_poly.hpp
Simulation/scripts/sitl/matlab/: configure_mcu_codegen.m  dump_gcs_frame_golden.m  dump_link_codec_golden.m  gcu.slxc  gen_lib_codegen.m  link.slxc  log_mcu_golden.m  main.slxc  mcu.slxc  plant.slxc  prune_mcu_configs.m  quadcop.slxc  run_gate_a.m  run_mcu_arm_codegen.m  run_mcu_recert.m  sensors.slxc  sil_check_mcu.m
Simulation/scripts/sitl/matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  s4F5LeE3ilixe5uyPOBV5iC.mat  s9CTJuPuSOG93g1zoGuHIgE.mat  sDx2HKEU1VjkWLbnaSCXs5D.mat  sFy5mIAPsWRtudJjhFoM3I.mat  sGhuSVYoNtyK5Db77YUB5jH.mat  sU6fFzeInrQ3rHYmTOmOQND.mat  sX7HgWr3KDFPt7Top7E5ILD.mat  sXRcKwf0uFEPOiVdNj1qKpC.mat  sZWAftihFP13yKHaf20amgD.l  sZWAftihFP13yKHaf20amgD.mat  sbM6QLNHToTleBBfbIVqdaF.mat  snsCOVeY9qHjPxSvxZ68KTE.mat  spn07KZuUWovzAtx934hiG.mat  srMaUPzzFL38ooeH2QCNikH.mat  syDdcJe7fp8NeJs6sI0rF8G.mat  szyVGAGANSEJvLPlYSW7mqB.mat
Simulation/scripts/sitl/mcu_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  mcu.cpp  mcu.h  mcu.mk  mcu.rsp  mcu_comp.rsp  mcu_data.cpp  mcu_manifest.txt  mcu_private.h  mcu_types.h  rtwtypes.h  rtwtypeschksum.mat
Simulation/scripts/sitl/mcu_ert_rtw/html/data/: data.js  model.js  pages.js
Simulation/scripts/sitl/mcu_ert_rtw/html/pages/: mcu_coderassumptions.html  mcu_interface.html  mcu_subsystems.html  mcu_survey.html
Simulation/scripts/sitl/mcu_ert_rtw/tmwinternal/: simulink_cache.xml  tr
Simulation/scripts/sitl/slprj/_jitprj/: jitEngineAccessInfo.mat  s4F5LeE3ilixe5uyPOBV5iC.l  s4F5LeE3ilixe5uyPOBV5iC.mat  s9CTJuPuSOG93g1zoGuHIgE.mat  sDx2HKEU1VjkWLbnaSCXs5D.mat  sFy5mIAPsWRtudJjhFoM3I.mat  sGhuSVYoNtyK5Db77YUB5jH.mat  sHdEoHgI912BMjI824k9uaD.mat  sU6fFzeInrQ3rHYmTOmOQND.mat  sX7HgWr3KDFPt7Top7E5ILD.mat  sXRcKwf0uFEPOiVdNj1qKpC.mat  sZWAftihFP13yKHaf20amgD.mat  sbM6QLNHToTleBBfbIVqdaF.mat  sbSB7XfI6xYR7DN2kqGBpAC.mat  seR8bpK0yJhLEIUeLTEEgSE.mat  snUiipg5HVdyHzDY0p1nbdB.mat  snsCOVeY9qHjPxSvxZ68KTE.mat  sq6Q8Jnasz9T5Rd4VLaevOE.mat  srMaUPzzFL38ooeH2QCNikH.mat  syDdcJe7fp8NeJs6sI0rF8G.l  syDdcJe7fp8NeJs6sI0rF8G.mat  sz1eCgZ5JXcqUKSI53ja1aD.mat  szyVGAGANSEJvLPlYSW7mqB.mat
Simulation/scripts/sitl/src/: codegen_shim_battery.cpp  codegen_shim_overspeed.cpp  quat_helpers_ref.cpp  safety_helpers_ref.cpp
Simulation/scripts/sitl/test/: csv.hpp  diag_mcu_replay.cpp  test_gcs_frame.cpp  test_link_codec.cpp  test_mcu_model.cpp  test_quat_golden.cpp  test_safety.cpp
(+1739 files in other folders)
